# simple-pkcs7

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clib.json  pkcs.c  pkcs.h
test/: CMakeLists.txt  test.c
